# ghostfix-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_CANDIDATE_CHECKLIST.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
agent/: daemon.py  daemon_runtime.py  terminal_watcher.py
cli/: main.py
core/: autofix.py  autonomous_agent.py  autonomous_benchmark.py  command_rerunner.py  confidence.py  config.py  context.py  data_generator.py  decision_engine.py  demo_report.py  detector.py  doctor.py  event_classifier.py  feedback.py  fix_audit.py  formatter.py  framework_fixer.py  incidents.py  iterative_agent.py  js_autofix.py  language_diagnostics.py  local_llm.py  log_events.py  logger.py  memory.py  parser.py  patch_generator.py  patch_validator.py  php_autofix.py  production_signals.py  production_validator.py  project_context.py  release_verifier.py  repo_engine.py  root_cause_analyzer.py  rules.py  runner.py  runtime_detector.py  safety_policy.py  tooling_diagnostics.py  (+2 more)
demos/: python_name_error.py
docs/: ARCHITECTURE.md  BRAIN_V4_TRAINING.md  CLOSED_BETA_GUIDE.md  DEMO_ASSETS.md  DEMO_COMMANDS.md  DEMO_SCRIPT.md  ENTERPRISE_READINESS.md  EXAMPLES.md  GITHUB_RELEASE_TEMPLATE.md  GPU_TRAINING_REQUIRED.md  LIMITATIONS.md  PACKAGING.md  PRODUCTION_READINESS.md  PRODUCTION_VALIDATION.md  PRODUCT_READINESS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  REAL_WORLD_RESULTS.md  RELIABILITY.md  ROADMAP.md  SAFETY.md  SAFETY_POLICY.md  SETUP.md  TRAINING_DATA_EXPORT.md  TRUST_AND_SAFETY.md  UX.md  WHY_DIFFERENT.md  ghostfix_system_design.md  runtime_brain_v4_baseline.json  runtime_brain_v4_baseline.md
ghostfix/: __init__.py
integrations/: __init__.py  clarity.py  posthog.py  sentry.py
ml/: aggressive_prune.py  brain_v3_features.py  brain_v4_inference.py  check_brain_v4_model.py  download_base_model.py  embedding_retriever.py  evaluate_brain_v2_safety.py  evaluate_brain_v31.py  evaluate_brain_v33.py  evaluate_brain_v4.py  evaluate_runtime_brain_v4.py  evaluate_watch_mode.py  feedback_logger.py  ghostfix_brain_predict.py  ghostfix_brain_v2_predict.py  ghostfix_brain_v33_predict.py  model_inference.py  predict_fix.py  (+7 more)
(+128 files in other folders)
